--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Set Default Scheme
+      run: default="sandbox-gh-actions"
+    
     - name: Show the currently detailed version of Xcode for CLI
       run: xcode-select -p
       
