--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -26,4 +26,4 @@ jobs:
         xcodebuild clean build \
           -project sandbox-gh-actions.xcodeproj \
           -scheme sandbox-gh-actions \
-          -destination 'platform=iOS Simulator,name=Iphone 13,OS=latest'
+          -destination 'platform=iOS Simulator,name=Iphone 13,OS=15.4'
