--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,10 +20,13 @@ jobs:
     - name: Show the currently detailed version of Xcode for CLI
       run: xcode-select -p
       
+    - name: Check Sims
+      run: xcrun simctl list &>/dev/null
+      
     - name: Run Tests
       run: |
         set -o pipefail
-        xcodebuild clean build \
+        xcodebuild clean test \
           -project sandbox-gh-actions.xcodeproj \
           -scheme sandbox-gh-actions \
-          -destination 'platform=iOS Simulator,name=Any iOS Device,OS=latest'
+          -destination 'platform=iOS Simulator,name=iPhone 13,OS=latest'
