--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -33,4 +33,5 @@ main:
     
     - name: Danger
       run: danger-swift ci
-      env: GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      env: 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
