--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -18,20 +18,22 @@ jobs:
       - name: git checkout
         uses: actions/checkout@v3
 
-      - name: ruby versions
-        run: |
-          ruby --version
-          gem --version
-          bundler --version
+#       - name: ruby versions
+#         run: |
+#           ruby --version
+#           gem --version
+#           bundler --version
 
-      # https://github.com/ruby/setup-ruby
-      - name: ruby setup
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 3.0.4
-          bundler-cache: true
+#       # https://github.com/ruby/setup-ruby
+#       - name: ruby setup
+#         uses: ruby/setup-ruby@v1
+#         with:
+#           ruby-version: 3.0.4
+#           bundler-cache: true
 
       - name: Danger
+        uses: danger/swift@3.3.0
+        with:
+            args: --failOnErrors --no-publish-check
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: bundle exec danger --verbose
