--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   main:
     name: Review, Lint, Verify
-    runs-on: macOS-12
+    runs-on: ubuntu-latest
     steps:
       - name: git checkout
         uses: actions/checkout@v3
