--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -17,7 +17,7 @@ jobs:
       id: create_tag
       run: |
         # Extract version from branch name
-        VERSION=$(echo ${GITHUB_REF##*/} | grep -oP 'v\d+\.\d+\.\d+')
+        VERSION=$(echo ${GITHUB_REF##*/} | grep -oP '\d+\.\d+\.\d+')
         RC_PREFIX="rc"
         
         # Get the latest RC number for this version
