--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       
     - name: Bump version and create tag
       id: create_tag
@@ -48,6 +48,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions
       with:
         tag_name: ${{ env.NEW_TAG }}
-        release_name: ${{ env.NEW_TAG }} Release Candidate (${{ env.RC_NUM }}
+        release_name: ${{ env.NEW_TAG }} Release Candidate (${{ env.RC_NUM }})
         draft: false
         prerelease: true
