--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -33,7 +33,11 @@ jobs:
           RC_NUM=$((LATEST_RC + 1))
         fi
 
-        # Create the new tag
+        # Export Version Number
+        NEW_VERSION="v${VERSION}"
+        echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+        
+        # Create and export the new tag
         NEW_TAG="v${VERSION}-${RC_PREFIX}${RC_NUM}"
         echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
         git tag $NEW_TAG
@@ -52,6 +56,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions
       with:
         tag_name: ${{ env.NEW_TAG }}
-        release_name: ${{ env.NEW_TAG }} Release Candidate (${{ env.RC_NUM }})
+        release_name: ${{ env.NEW_VERSION }} Release Candidate (${{ env.RC_NUM }})
         draft: false
         prerelease: true
