--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -68,8 +68,8 @@ jobs:
       uses: mikepenz/release-changelog-builder-action@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        fromTag: ${{ env.PREVIOUS_TAG }}
-        toTag: ${{ env.NEW_TAG }}
+        fromTag: ${{ env.NEW_TAG }} 
+        toTag: ${{ env.PREVIOUS_TAG }}
 
     - name: Create Pre Release on Github
       id: create_release
