--- a/.github/workflows/finalize-release.yml
+++ b/.github/workflows/finalize-release.yml
@@ -32,5 +32,5 @@ jobs:
           generateReleaseNotes: true
           name: ${{ inputs.version }}
           prerelease: false
-          tag: "v${{ env.NEW_TAG }}"
+          tag: "v${{ inputs.version }}"
           token: ${{ secrets.GITHUB_TOKEN }}
